# poetry-issue-2369

./: README.md  pyproject.toml
src/poetry_issue_2369/: __init__.py  __main__.py  cli.py
